[package]
name = "offload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15.0"
openssh = "0.9.8"
tokio = { version = "1.24.1", features = ["full"]}
do-notation = "0.1.3"
futures = "0.3.25"
tokio-stream = { version = "0.1.11", features = ["io-util"]}
ctrlc = "3.2.4"
exitcode = "1.1.2"
futures-lite = "1.12.0"
